--- a/projects/vs/libmeme_string/libmeme_string.vcxproj
+++ b/projects/vs/libmeme_string/libmeme_string.vcxproj
@@ -185,6 +185,8 @@
     <ClInclude Include="..\..\..\include\meme\string_memory.h" />
     <ClInclude Include="..\..\..\include\meme\string_memory_fwd.h" />
     <ClInclude Include="..\..\..\include\meme\unsafe\view.h" />
+    <ClInclude Include="..\..\..\include\meme\variable_buffer.h" />
+    <ClInclude Include="..\..\..\include\meme\variable_buffer_fwd.h" />
     <ClInclude Include="..\..\..\include_private\meme\impl\algorithm.h" />
     <ClInclude Include="..\..\..\include_private\meme\impl\atomic.h" />
     <ClInclude Include="..\..\..\include_private\meme\impl\atomic_fwd.h" />
@@ -201,6 +203,7 @@
   <ItemGroup>
     <ClCompile Include="..\..\..\src\MemeBuffer.c" />
     <ClCompile Include="..\..\..\src\MemeStringEditor.c" />
+    <ClCompile Include="..\..\..\src\MemeVariableBuffer.c" />
     <ClCompile Include="..\..\..\src\meme_atomic__basics.c" />
     <ClCompile Include="..\..\..\src\meme_impl__algorithm.c" />
     <ClCompile Include="..\..\..\src\meme_string__basics.c" />
