--- a/projects/vs/libmeme_string/libmeme_string.vcxproj
+++ b/projects/vs/libmeme_string/libmeme_string.vcxproj
@@ -154,10 +154,12 @@
     <ClInclude Include="..\..\..\include\memepp\buffer_fwd.hpp" />
     <ClInclude Include="..\..\..\include\memepp\buffer_impl.hpp" />
     <ClInclude Include="..\..\..\include\memepp\convert\common.hpp" />
+    <ClInclude Include="..\..\..\include\memepp\convert\common_def.hpp" />
     <ClInclude Include="..\..\..\include\memepp\convert\exprtk_ex.hpp" />
     <ClInclude Include="..\..\..\include\memepp\convert\fmt.hpp" />
     <ClInclude Include="..\..\..\include\memepp\convert\qt\string.hpp" />
     <ClInclude Include="..\..\..\include\memepp\convert\rapidjson.hpp" />
+    <ClInclude Include="..\..\..\include\memepp\convert\self.hpp" />
     <ClInclude Include="..\..\..\include\memepp\convert\std\vector.hpp" />
     <ClInclude Include="..\..\..\include\memepp\convert\std\string.hpp" />
     <ClInclude Include="..\..\..\include\memepp\hash\std_hash.hpp" />
@@ -175,6 +177,10 @@
     <ClInclude Include="..\..\..\include\memepp\string_view_def.hpp" />
     <ClInclude Include="..\..\..\include\memepp\string_view_fwd.hpp" />
     <ClInclude Include="..\..\..\include\memepp\string_view_impl.hpp" />
+    <ClInclude Include="..\..\..\include\memepp\variable_buffer.hpp" />
+    <ClInclude Include="..\..\..\include\memepp\variable_buffer_def.hpp" />
+    <ClInclude Include="..\..\..\include\memepp\variable_buffer_fwd.hpp" />
+    <ClInclude Include="..\..\..\include\memepp\variable_buffer_impl.hpp" />
     <ClInclude Include="..\..\..\include\meme\buffer.h" />
     <ClInclude Include="..\..\..\include\meme\buffer_fwd.h" />
     <ClInclude Include="..\..\..\include\meme\common.h" />
