--- a/projects/vs/libmeme_string/libmeme_string.vcxproj
+++ b/projects/vs/libmeme_string/libmeme_string.vcxproj
@@ -182,6 +182,7 @@
     <ClInclude Include="..\..\..\include\memepp\variable_buffer_def.hpp" />
     <ClInclude Include="..\..\..\include\memepp\variable_buffer_fwd.hpp" />
     <ClInclude Include="..\..\..\include\memepp\variable_buffer_impl.hpp" />
+    <ClInclude Include="..\..\..\include\memepp\word.hpp" />
     <ClInclude Include="..\..\..\include\memepp\word_def.hpp" />
     <ClInclude Include="..\..\..\include\memepp\word_fwd.hpp" />
     <ClInclude Include="..\..\..\include\memepp\word_impl.hpp" />
@@ -197,6 +198,7 @@
     <ClInclude Include="..\..\..\include\meme\unsafe\view.h" />
     <ClInclude Include="..\..\..\include\meme\variable_buffer.h" />
     <ClInclude Include="..\..\..\include\meme\variable_buffer_fwd.h" />
+    <ClInclude Include="..\..\..\include\meme\word.h" />
     <ClInclude Include="..\..\..\include_private\meme\impl\algorithm.h" />
     <ClInclude Include="..\..\..\include_private\meme\impl\atomic.h" />
     <ClInclude Include="..\..\..\include_private\meme\impl\atomic_fwd.h" />
