Squashed commit of the following:
commit 30d4bcb02701e0da0873b9d80d74ce2d6353e98b
Author: FlowerFerry <422040095@qq.com>
Date:   Tue Aug 29 09:41:51 2023 +0800

    -

commit d528a8dadbadcdbe46586a2f7df28ae870e763bd
Author: FlowerFerry <422040095@qq.com>
Date:   Tue Aug 29 09:40:41 2023 +0800

    -

commit 5a4a287728cd19d4bb7f9596b08000ae8c310345
Author: FlowerFerry <422040095@qq.com>
Date:   Mon Aug 28 18:59:28 2023 +0800

    -

commit 30ceb3cde0c7ac692411e31e6fc303778169c6d4
Author: FlowerFerry <422040095@qq.com>
Date:   Fri Aug 25 00:16:44 2023 +0800

    -

commit 40aaf37c36e2693f959d7d51ce4d225053166f46
Author: FlowerFerry <422040095@qq.com>
Date:   Sat Jul 22 18:55:11 2023 +0800

    -

commit c470c2e882854c8c6e376c9e6624f2ceecd6dde6
Author: FlowerFerry <422040095@qq.com>
Date:   Sat Jul 8 18:59:08 2023 +0800

    -

commit ba09731ab664374673f87902f8416719076fda61
Author: FlowerFerry <422040095@qq.com>
Date:   Sat Jul 8 13:00:56 2023 +0800

    -

commit f9fcb124b04d844ca105017251488431cc086739
Author: FlowerFerry <422040095@qq.com>
Date:   Thu Jul 6 02:55:41 2023 +0800

    -

commit c26bdec3060d0813ed9a299b6ab9e117c3e25357
Author: FlowerFerry <422040095@qq.com>
Date:   Tue Jul 4 17:00:08 2023 +0800

    -

commit 8311083b1e55e1ea1c84461ebf6caa95e2a7d2b8
Author: FlowerFerry <422040095@qq.com>
Date:   Thu Jun 29 16:39:39 2023 +0800

    -

commit 2b9f9a9476d95e68d1a2f170b2b3fee8ace9b39b
Author: FlowerFerry <422040095@qq.com>
Date:   Tue Jun 27 11:33:22 2023 +0800

    -

commit 2ec48e0100aaf9a0b050d3d531eee8a44e8ba402
Author: FlowerFerry <422040095@qq.com>
Date:   Tue Jun 13 11:29:23 2023 +0800

    utf8 and utf16 and utf32 converter

commit c2345843d195f72aaef3eae4da21a7cc0cb87325
Author: FlowerFerry <422040095@qq.com>
Date:   Fri Jun 9 16:27:45 2023 +0800

    -

commit e8e6bd326b96585e1b9a7f3aa80c7d644313e74e
Author: FlowerFerry <422040095@qq.com>
Date:   Mon Apr 24 16:33:05 2023 +0800

    -

commit add47831e2c72eccbdb1405fbc023fb6464db443
Author: Flower

--- a/projects/vs/libmeme_string/libmeme_string.vcxproj
+++ b/projects/vs/libmeme_string/libmeme_string.vcxproj
@@ -97,6 +97,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <ModuleDefinitionFile>Export.def</ModuleDefinitionFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -111,6 +112,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <ModuleDefinitionFile>export.def</ModuleDefinitionFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -129,6 +131,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <ModuleDefinitionFile>Export.def</ModuleDefinitionFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -147,6 +150,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <ModuleDefinitionFile>export.def</ModuleDefinitionFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -154,6 +158,10 @@
     <ClInclude Include="..\..\..\include\memepp\buffer_def.hpp" />
     <ClInclude Include="..\..\..\include\memepp\buffer_fwd.hpp" />
     <ClInclude Include="..\..\..\include\memepp\buffer_impl.hpp" />
+    <ClInclude Include="..\..\..\include\memepp\buffer_view.hpp" />
+    <ClInclude Include="..\..\..\include\memepp\buffer_view_def.hpp" />
+    <ClInclude Include="..\..\..\include\memepp\buffer_view_fwd.hpp" />
+    <ClInclude Include="..\..\..\include\memepp\buffer_view_impl.hpp" />
     <ClInclude Include="..\..\..\include\memepp\convert\common.hpp" />
     <ClInclude Include="..\..\..\include\memepp\convert\common_def.hpp" />
     <ClInclude Include="..\..\..\include\memepp\convert\exprtk_ex.hpp" />
@@ -162,6 +170,7 @@
     <ClInclude Include="..\..\..\include\memepp\convert\rapidjson.hpp" />
     <ClInclude Include="..\..\..\include\memepp\convert\redis++.hpp" />
     <ClInclude Include="..\..\..\include\memepp\convert\self.hpp" />
+    <ClInclude Include="..\..\..\include\memepp\convert\std\u16string.hpp" />
     <ClInclude Include="..\..\..\include\memepp\convert\std\vector.hpp" />
     <ClInclude Include="..\..\..\include\memepp\convert\std\string.hpp" />
     <ClInclude Include="..\..\..\include\memepp\convert\uvw.hpp" />
@@ -197,13 +206,25 @@
     <ClInclude Include="..\..\..\include\meme\buffer.h" />
     <ClInclude Include="..\..\..\include\meme\buffer_fwd.h" />
     <ClInclude Include="..\..\..\include\meme\common.h" />
+    <ClInclude Include="..\..\..\include\meme\std\string16.h" />
     <ClInclude Include="..\..\..\include\meme\string.h" />
     <ClInclude Include="..\..\..\include\meme\string_builder.h" />
     <ClInclude Include="..\..\..\include\meme\string_builder_fwd.h" />
     <ClInclude Include="..\..\..\include\meme\string_fwd.h" />
     <ClInclude Include="..\..\..\include\meme\string_memory.h" />
     <ClInclude Include="..\..\..\include\meme\string_memory_fwd.h" />
-    <ClInclude Include="..\..\..\include\meme\unsafe\view.h" />
+    <ClInclude Include="..\..\..\include\meme\unsafe\buffer_view.h" />
+    <ClInclude Include="..\..\..\include\meme\unsafe\string_view.h" />
+    <ClInclude Include="..\..\..\include\meme\utf\converter.h" />
+    <ClInclude Include="..\..\..\include\meme\utf\converter_fwd.h" />
+    <ClInclude Include="..\..\..\include\meme\utf\converter_list.h" />
+    <ClInclude Include="..\..\..\include\meme\utf\default_converter.h" />
+    <ClInclude Include="..\..\..\include\meme\utf\u16rune.h" />
+    <ClInclude Include="..\..\..\include\meme\utf\u16rune_fwd.h" />
+    <ClInclude Include="..\..\..\include\meme\utf\u32rune.h" />
+    <ClInclude Include="..\..\..\include\meme\utf\u32rune_fwd.h" />
+    <ClInclude Include="..\..\..\include\meme\utf\u8rune.h" />
+    <ClInclude Include="..\..\..\include\meme\utf\u8rune_fwd.h" />
     <ClInclude Include="..\..\..\include\meme\variable_buffer.h" />
     <ClInclude Include="..\..\..\include\meme\variable_buffer_fwd.h" />
     <ClInclude Include="..\..\..\include\meme\rune.h" />
@@ -218,12 +239,15 @@
     <ClInclude Include="..\..\..\include_private\meme\impl\string_p__medium.h" />
     <ClInclude Include="..\..\..\include_private\meme\impl\string_p__small.h" />
     <ClInclude Include="..\..\..\include_private\meme\impl\string_p__user.h" />
+    <ClInclude Include="..\..\..\include_private\meme\impl\utf\converter.h" />
+    <ClInclude Include="..\..\..\include_private\meme\impl\utf\converter_list.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\src\meme_buffer.c" />
     <ClCompile Include="..\..\..\src\meme_memory.c" />
     <ClCompile Include="..\..\..\src\meme_string_builder.c" />
+    <ClCompile Include="..\..\..\src\meme_utf_converter.c" />
     <ClCompile Include="..\..\..\src\meme_variable_buffer.c" />
     <ClCompile Include="..\..\..\src\meme_atomic__basics.c" />
     <ClCompile Include="..\..\..\src\meme_impl__algorithm.c" />
@@ -231,6 +255,9 @@
     <ClCompile Include="..\..\..\src\meme_string__stack.c" />
     <ClCompile Include="..\..\..\src\meme_rune.c" />
     <ClCompile Include="dllmain.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="export.def" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
