--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,3 +33,8 @@ set_target_properties(meme_string PROPERTIES
 # 设置版本号
 string(TIMESTAMP BUILD_DATE "%Y%m%d%H%M")
 set_target_properties(meme_string PROPERTIES VERSION ${PROJECT_VERSION}.${BUILD_DATE})
+
+install(TARGETS meme_string
+    LIBRARY DESTINATION lib
+    DIRECTORY include/ DESTINATION include
+    )
