--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,4 @@
+
 cmake_minimum_required(VERSION 3.14)
 
 if (WIN32)
@@ -17,8 +18,8 @@ set(CMAKE_C_STANDARD_REQUIRED ON)
 
 # 添加链接库
 if (NOT WIN32)
-find_package(Threads REQUIRED)
-set(LINK_LIBS Threads::Threads ${CMAKE_DL_LIBS} rt)
+  find_package(Threads REQUIRED)
+  set(LINK_LIBS Threads::Threads ${CMAKE_DL_LIBS} rt)
 endif()
 
 # 设置编译选项
@@ -29,7 +30,8 @@ file(GLOB SRC_FILES "src/*.c")
 add_library(${PROJECT_NAME} SHARED ${SRC_FILES})
 target_compile_definitions(${PROJECT_NAME} PRIVATE MEME_OPTION__BUILD_SHARED)
 target_link_libraries(${PROJECT_NAME} PRIVATE ${LINK_LIBS})
-target_include_directories(${PROJECT_NAME} PUBLIC include 3rdparty/cvector/include include_private)
+target_include_directories(${PROJECT_NAME} PUBLIC include)
+target_include_directories(${PROJECT_NAME} PRIVATE 3rdparty/cvector/include include_private)
 
 # 设置 rpath
 set_target_properties(${PROJECT_NAME} PROPERTIES
@@ -37,7 +39,7 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
     INSTALL_RPATH "$ORIGIN")
 
 # 设置版本号
-string(TIMESTAMP BUILD_DATE "%Y%m%d%H%M")
+# string(TIMESTAMP BUILD_DATE "%Y%m%d%H%M")
 
 set_target_properties(${PROJECT_NAME} PROPERTIES VERSION ${PROJECT_VERSION})
 
